@@ -1,6 +1,7 @@
 import collections
 import time
 import traceback
+import warnings
 
 from eventlet import api
 
@@ -15,7 +16,7 @@ class NOT_USED:
 
 NOT_USED = NOT_USED()
 
-class event(object):
+class Event(object):
     """An abstraction where an arbitrary number of coroutines
     can wait for one event from another.
 
@@ -28,7 +29,7 @@ class event(object):
     They are ideal for communicating return values between coroutines.
 
     >>> from eventlet import coros, api
-    >>> evt = coros.event()
+    >>> evt = coros.Event()
     >>> def baz(b):
     ...     evt.send(b + 1)
     ...
@@ -50,7 +51,7 @@ class event(object):
         Can only be called after :meth:`send` has been called.
 
         >>> from eventlet import coros
-        >>> evt = coros.event()
+        >>> evt = coros.Event()
         >>> evt.send(1)
         >>> evt.reset()
         >>> evt.send(2)
@@ -111,7 +112,7 @@ class event(object):
         :meth:`send`.
 
         >>> from eventlet import coros, api
-        >>> evt = coros.event()
+        >>> evt = coros.Event()
         >>> def wait_on():
         ...    retval = evt.wait()
         ...    print "waited for", retval
@@ -141,7 +142,7 @@ class event(object):
         result and then returns immediately to the parent.
 
         >>> from eventlet import coros, api
-        >>> evt = coros.event()
+        >>> evt = coros.Event()
         >>> def waiter():
         ...     print 'about to wait'
         ...     result = evt.wait()
@@ -184,6 +185,10 @@ class event(object):
         # the arguments and the same as for greenlet.throw
         return self.send(None, args)
 
+def event(*a, **kw):
+    warnings.warn("The event class has been capitalized!  Please construct"
+        " Event objects instead.", DeprecationWarning, stacklevel=2)
+    return Event(*a, **kw)
 
 class Semaphore(object):
     """An unbounded semaphore.
@@ -342,7 +347,7 @@ class metaphore(object):
     """
     def __init__(self):
         self.counter = 0
-        self.event   = event()
+        self.event   = Event()
         # send() right away, else we'd wait on the default 0 count!
         self.event.send()
 
@@ -391,7 +396,7 @@ def execute(func, *args, **kw):
     >>> evt.wait()
     ('foo', 1)
     """
-    evt = event()
+    evt = Event()
     def _really_execute():
         evt.send(func(*args, **kw))
     api.spawn(_really_execute)
@@ -583,7 +588,7 @@ class Actor(object):
         serially.
         """
         self._mailbox = collections.deque()
-        self._event = event()
+        self._event = Event()
         self._killer = api.spawn(self.run_forever)
         self._pool = CoroutinePool(min_size=0, max_size=concurrency)
 
@@ -592,7 +597,7 @@ class Actor(object):
         while True:
             if not self._mailbox:
                 self._event.wait()
-                self._event = event()
+                self._event = Event()
             else:
                 # leave the message in the mailbox until after it's
                 # been processed so the event doesn't get triggered
@@ -629,11 +634,11 @@ class Actor(object):
         ...
         >>> a = Greeter()
 
-        This example uses events to synchronize between the actor and the main
+        This example uses Events to synchronize between the actor and the main
         coroutine in a predictable manner, but this kinda defeats the point of
         the :class:`Actor`, so don't do it in a real application.
 
-        >>> evt = event()
+        >>> evt = Event()
         >>> a.cast( ("message 1", evt) )
         >>> evt.wait()  # force it to run at this exact moment
         received message 1
